--- a/_includes/statistic.html
+++ b/_includes/statistic.html
@@ -1,5 +1,5 @@
-<!-- Begin Statistic Section -->
-<section id="statistic" class="statistic image-section parallax" style="background-image: url({{ site.baseurl }}/img/sections-background/{{ site.statisticBlockImage }});">
+<!-- Begin Statistic Section: remove the bloc --> 
+<!-- <section id="statistic" class="statistic image-section parallax" style="background-image: url({{ site.baseurl }}/img/sections-background/{{ site.statisticBlockImage }});">
 	<div class="overlay solid-overlay"></div>
 	<div class="content-wrapper">
 		<div class="col-lg-10 col-lg-offset-1">
@@ -20,5 +20,5 @@
             {% endfor %}
 		</div>
 	</div>
-</section>
+</section> --> 
 <!-- End Statistic Section -->
