Remove speaker list

--- a/_includes/speakers-list.html
+++ b/_includes/speakers-list.html
@@ -1,5 +1,5 @@
 <!-- Begin Speakers List-->
-<section id="speakers" class="speakers">
+<!--<section id="speakers" class="speakers">
     <div class="content-wrapper">
         <div class="col-lg-10 col-lg-offset-1">
             <div class="row text-left appear-animation-trigger">
@@ -53,5 +53,5 @@
             <a href="{{ site.c4pUrl }}" class="btn btn-primary waves-effect waves-button waves-light waves-float" target="_blank">Become a speaker</a>     
         </div>
     </div>
-</section>
+</section>-->
 <!-- End Speakers List -->
