--- a/_includes/hotel.html
+++ b/_includes/hotel.html
@@ -16,7 +16,7 @@
 </div>
 </div>
 <div class="hotel">
-<div class="hotelimage"><a href="http://www.thegeorgianterrace.com/" target="_blank" rel="noopener noreferrer"><img src="../img/hotel/georgianterrace.png" alt="The Georgian Terrace" /></a></div>
+<div class="hotelimage"><a href="http://www.thegeorgianterrace.com/" target="_blank" rel="noopener noreferrer"><img src="gsd2021-emory.github.io/img/hotel/georgianterrace.png" alt="The Georgian Terrace" /></a></div>
 <div class="hotelinfo">
 <div class="hotelname"><a href="http://www.thegeorgianterrace.com/" target="_blank" rel="noopener noreferrer">The Georgian Terrace</a></div>
 <div class="hoteladdress">659 Peachtree St NE, Atlanta, GA 30308</div>
