--- a/_includes/hotel.html
+++ b/_includes/hotel.html
@@ -1,6 +1,6 @@
 	<div class="entry-content">
 		<div class="hotel">
-<div class="hotelimage"><a href="http://www.secure-res.com/res/vn3/cglogin.aspx?hotelid=2871&amp;rlog=957&amp;pd=jeffwu" target="_blank" rel="noopener noreferrer"><img src="gsd2021-emory.github.io/img/hotel/gt-hotel.png" alt="Georgia Tech Hotel &amp; Conference Center" /></a></div>
+<div class="hotelimage"><a href="http://www.secure-res.com/res/vn3/cglogin.aspx?hotelid=2871&amp;rlog=957&amp;pd=jeffwu" target="_blank" rel="noopener noreferrer"><img src="img/hotel/gt-hotel.png" alt="Georgia Tech Hotel &amp; Conference Center" /></a></div>
 <div class="hotelinfo">
 <div class="hotelname"><a href="http://www.secure-res.com/res/vn3/cglogin.aspx?hotelid=2871&amp;rlog=957&amp;pd=jeffwu" target="_blank" rel="noopener noreferrer">Georgia Tech Hotel &amp; Conference Center</a></div>
 <div class="hoteladdress">800 Spring St NW, Atlanta, GA 30308</div>
@@ -8,7 +8,7 @@
 </div>
 </div>
 <div class="hotel">
-<div class="hotelimage"><a href="http://www.marriott.com/hotels/travel/atlbd-renaissance-atlanta-midtown-hotel/" target="_blank" rel="noopener noreferrer"><img src="gsd2021-emory.github.io/img/hotel/renaissance.png" alt="Renaissance Atlanta Midtown" /></a></div>
+<div class="hotelimage"><a href="http://www.marriott.com/hotels/travel/atlbd-renaissance-atlanta-midtown-hotel/" target="_blank" rel="noopener noreferrer"><img src="img/hotel/renaissance.png" alt="Renaissance Atlanta Midtown" /></a></div>
 <div class="hotelinfo">
 <div class="hotelname"><a href="http://www.marriott.com/hotels/travel/atlbd-renaissance-atlanta-midtown-hotel/" target="_blank" rel="noopener noreferrer">Renaissance Atlanta Midtown</a></div>
 <div class="hoteladdress">866 West Peachtree St NW, Atlanta, GA 30308</div>
@@ -16,7 +16,7 @@
 </div>
 </div>
 <div class="hotel">
-<div class="hotelimage"><a href="http://www.thegeorgianterrace.com/" target="_blank" rel="noopener noreferrer"><img src="gsd2021-emory.github.io/img/hotel/georgianterrace.png" alt="The Georgian Terrace" /></a></div>
+<div class="hotelimage"><a href="http://www.thegeorgianterrace.com/" target="_blank" rel="noopener noreferrer"><img src="img/hotel/georgianterrace.png" alt="The Georgian Terrace" /></a></div>
 <div class="hotelinfo">
 <div class="hotelname"><a href="http://www.thegeorgianterrace.com/" target="_blank" rel="noopener noreferrer">The Georgian Terrace</a></div>
 <div class="hoteladdress">659 Peachtree St NE, Atlanta, GA 30308</div>
