--- a/_includes/hotel.html
+++ b/_includes/hotel.html
@@ -1,3 +1,8 @@
+<article id="post-7" class="post-7 page type-page status-publish hentry">
+	<header class="entry-header">
+		<h1 class="entry-title">Hotels</h1>	</header><!-- .entry-header -->
+
+	
 	<div class="entry-content">
 		<div class="hotel">
 <div class="hotelimage"><a href="http://www.secure-res.com/res/vn3/cglogin.aspx?hotelid=2871&amp;rlog=957&amp;pd=jeffwu" target="_blank" rel="noopener noreferrer"><img src="/img/hotel/gt-hotel.png" alt="Georgia Tech Hotel &amp; Conference Center" /></a></div>
@@ -23,4 +28,8 @@
 <div class="hotelphone">404.897.1991</div>
 </div>
 </div>	</div><!-- .entry-content -->
+	
+	
+</article><!-- #post-## -->
+
 
