--- a/_includes/hotel.html
+++ b/_includes/hotel.html
@@ -1,3 +1,6 @@
+<div id="primary" class="content-area">
+	<main id="main" class="site-main" role="main">
+		
 <article id="post-7" class="post-7 page type-page status-publish hentry">
 	<header class="entry-header">
 		<h1 class="entry-title">Hotels</h1>	</header><!-- .entry-header -->
@@ -31,5 +34,10 @@
 	
 	
 </article><!-- #post-## -->
+		
+	</main><!-- .site-main -->
+
+	
+</div><!-- .content-area -->
 
 
