--- a/_sass/partials/_navigation.scss
+++ b/_sass/partials/_navigation.scss
@@ -1,5 +1,5 @@
-$nav-color: #fff;
-$nav-color-hover: #cfcfcf;
+$nav-color: #000;
+$nav-color-hover: #fff;
 $nav-scroll-color: rgba(0, 0, 0, .5);
 $nav-scroll-color-hover: rgba(0, 0, 0, .8);
 
