--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,6 +2,7 @@
 <section id="about" class="about">
     <div class="content-wrapper">
         <div class="col-lg-10 col-lg-offset-1">
+<!--             <h3>{About Georgia Statistics Day 2021}</h3> -->
             <h3>{{ site.aboutTitle }}</h3>
             <div class="row about-details">
                 {% assign animationDelay = 0 %}
@@ -9,8 +10,7 @@
                 {% assign colWidth = 12 | divided_by: forloop.length %}
                 <div class="col-md-{{ colWidth }} col-xs-6">  
                     <div class="animated hiding" data-animation="fadeInDown" data-delay="{{ animationDelay }}">
-                         <h5>{About Georgia Statistics Day 2021}</h5>
-<!--                         <h5>{{ about.title }}</h5> -->
+                        <h5>{{ about.title }}</h5>
 <!--                         <img class="img-circle" src="{{ site.baseurl }}/img/about-section/{{ about.image }}" height="128" width="128" alt="{{ about.title }}"> -->
                         <p>{{ about.text }}</p>
                     </div>
