--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,7 +13,7 @@
                         <h5>{{ about.title }}</h5>
 <!--                         <img class="img-circle" src="{{ site.baseurl }}/img/about-section/{{ about.image }}" height="128" width="128" alt="{{ about.title }}"> -->
                         <p>{{ about.text }}</p>
-                        This is a test. 
+                        <strong>This is a test. </strong>
                     </div>
                 </div>
                 {% assign animationDelay = animationDelay | plus:500 %}
