--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
                     <div class="animated hiding" data-animation="fadeInDown" data-delay="{{ animationDelay }}">
                         <h5>{{ about.title }}</h5>
 <!--                         <img class="img-circle" src="{{ site.baseurl }}/img/about-section/{{ about.image }}" height="128" width="128" alt="{{ about.title }}"> -->
-                        <p>{{ about.txt }}</p>
+                        <p>{{ about.text }}</p>
                         <strong>This is a test. </strong>
                     </div>
                 </div>
