--- a/_includes/speakers-list-2.html
+++ b/_includes/speakers-list-2.html
@@ -1,5 +1,5 @@
 <!-- Begin Speakers List 2-->
-<!-- <section id="speakers">
+<section id="speakers">
     <div class="content-wrapper">
         <div class="col-lg-10 col-lg-offset-1 appear-animation-trigger">
             {% for speaker in site.data.speakers %}
@@ -39,5 +39,5 @@
         </div>
         <a href="{{ site.c4pUrl }}" class="bottom-section-link btn btn-primary waves-effect waves-button waves-light waves-float" target="_blank">Become a speaker</a>         
     </div>
-</section>-->
+</section>
 <!-- End Speakers List 2 -->
