--- a/_includes/find-way.html
+++ b/_includes/find-way.html
@@ -43,10 +43,11 @@
                     <a id="find-flight" href="https://google.com/flights" class="pull-right hidden" target="_blank">{{ site.findWayFindFlight }}</a>
                 </li>
             </ul>
-<!--              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3315.6064446508885!2d-84.32738398397116!3d33.79665983860108!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f506f7702a174f%3A0x425805444a5b7e35!2s550%20Houston%20Mill%20Rd%20NE%2C%20Atlanta%2C%20GA%2030329!5e0!3m2!1szh-CN!2sus!4v1627334803725!5m2!1szh-CN!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        -->
+
             <div class="clearfix"></div>
-            <a href="https://maps.google.com/maps?ll={{ site.eventPlaceCoordinates | replace:' ',''}}&z=17&t=m&hl=en-US&gl=US&mapclient=embed&q={{ site.eventStreetAddress | replace:' ','%20' | replace:',','%2C'}}%2C%20{{ site.eventAddressLocality | replace:' ','%20' | replace:',','%2C'}}" class="view-on-map" target="_blank">{{ site.viewOnMap }}</a>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3315.6064446508885!2d-84.32738398397116!3d33.79665983860108!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f506f7702a174f%3A0x425805444a5b7e35!2s550%20Houston%20Mill%20Rd%20NE%2C%20Atlanta%2C%20GA%2030329!5e0!3m2!1szh-CN!2sus!4v1627334803725!5m2!1szh-CN!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src =“https://www.google.com/maps/embed/v1/search?key= key-airlock-321021＆parameters allowfullscreen> </ iframe>
+<!--             <a href="https://maps.google.com/maps?ll={{ site.eventPlaceCoordinates | replace:' ',''}}&z=17&t=m&hl=en-US&gl=US&mapclient=embed&q={{ site.eventStreetAddress | replace:' ','%20' | replace:',','%2C'}}%2C%20{{ site.eventAddressLocality | replace:' ','%20' | replace:',','%2C'}}" class="view-on-map" target="_blank">{{ site.viewOnMap }}</a> -->
         </div>
     </div>
 </section>
