--- a/_includes/about_2.html
+++ b/_includes/about_2.html
@@ -1,6 +1,6 @@
 <html>
    <body>
-	 <div style="margin:1%; padding=1%">
+	 <div style="width: 65%; float:left; margin:1%; padding=1%">
 
 	   <p>The Department of Biostatistics and Bioinformatics at
 		 the Rollins School of Public Health, Emory University
@@ -37,6 +37,24 @@
 		 <ul>
 		   <li><a href="https://www.stat.uga.edu/directory/people/abhyuday-mandal">Abhyuday Mandal</a>, <em>University of Georgia</em></li>
 		 </ul>
+
+
+		
+	 </div>
+
+	 <div style="width: 25%; float:left; margin:2%; padding=1%">
+	   <center>
+		 <h2>Keynote Speaker</h2>
+		 <img src="PeterGilbert.jpg", width="60%">
+		 <p>
+		   <strong>
+			 Dr. Peter Gilbert<br>
+			 Professor of Biostatistics<br>
+			 Fred Hutchinson Cancer Research Center<br>
+			 Department of Biostatistics,  University of Washington<br>
+		   </strong>
+	   </center>
+	 </div>
 
    </body>
 </html>
