change font size

--- a/_includes/about_2.html
+++ b/_includes/about_2.html
@@ -15,7 +15,7 @@
 
 		 <hr>
 		 
-		 <h5>Organizing Committee</h5>
+		 <h5 style="font-size:16px">Organizing Committee</h5>
 		 <ul>
 		   <li><a href="https://sph.emory.edu/faculty/profile/index.php?FID=limin-peng-338">
 			   Limin Peng</a>, <em>Emory University</em>
