change font weight

--- a/_includes/about_2.html
+++ b/_includes/about_2.html
@@ -15,7 +15,7 @@
 
 		 <hr>
 		 
-		 <h5 style="font-size:16px">Organizing Committee</h5>
+		 <h5 style="font-size:18px">Organizing Committee</h5>
 		 <ul>
 		   <li><a href="https://sph.emory.edu/faculty/profile/index.php?FID=limin-peng-338">
 			   Limin Peng</a>, <em>Emory University</em>
@@ -28,12 +28,12 @@
 			   Azhar Nizam</a>, <em>Emory University</em>
 		 </ul>
 		 
-		 <h5>Georgia Tech Coordinator</h5>
+		 <h5 style="font-size:18px">Georgia Tech Coordinator</h5>
 		 <ul>
 		   <li><a href="https://www.isye.gatech.edu/users/yajun-mei">Yajun Mei</a>, <em>Georgia Tech</em></li>
 		 </ul>
 		 
-		 <h5>University of Georgia Coordinator</h5>
+		 <h5 style="font-size:18px">University of Georgia Coordinator</h5>
 		 <ul>
 		   <li><a href="https://www.stat.uga.edu/directory/people/abhyuday-mandal">Abhyuday Mandal</a>, <em>University of Georgia</em></li>
 		 </ul>
@@ -42,7 +42,7 @@
 
 	 <div style="width: 25%; float:left; margin:2%; padding=1%">
 	   <center>
-		 <h5>Keynote Speaker</h5>
+		 <h5 style="font-size:18px; font-weight: bold;">Keynote Speaker</h5>
 		 <img src="PeterGilbert.jpg", width="60%">
 		 <p>
 		   <strong>
