--- a/_includes/find-way.html
+++ b/_includes/find-way.html
@@ -1,5 +1,5 @@
 <!-- Begin Find Way-->
-<section id="find-way" class="find-way">    
+<!-- <section id="find-way" class="find-way">    
     <div id="canvas-map" class="canvas-map"></div>
     <div class="content-wrapper text-left">
         <h3 class="animated hiding" data-animation="fadeInUp" data-delay="0">{{ site.findWayTitle }}</h3>
@@ -48,7 +48,7 @@
             <div class="clearfix"></div>
                <!--                 <iframe src ="https://www.google.com/maps/embed/v1/search?key= AIzaSyAsNkG8Q_ht8EkE_XFd8fTpdmC0CtYcG8k" allowfullscreen> </ iframe> -->
 <!--             <a href="https://maps.google.com/maps?ll={{ site.eventPlaceCoordinates | replace:' ',''}}&z=17&t=m&hl=en-US&gl=US&mapclient=embed&q={{ site.eventStreetAddress | replace:' ','%20' | replace:',','%2C'}}%2C%20{{ site.eventAddressLocality | replace:' ','%20' | replace:',','%2C'}}" class="view-on-map" target="_blank">{{ site.viewOnMap }}</a> -->
-        </div>
+<!--         </div>
     </div>
-</section>
+</section> --> 
 <!-- End Find Way -->
