--- a/_includes/about_2.html
+++ b/_includes/about_2.html
@@ -43,7 +43,7 @@
 	 <div style="width: 25%; float:left; margin:2%; padding=1%">
 	   <center>
 		 <h5 style="font-size:18px; font-weight: bold;">Keynote Speaker</h5>
-		 <img src="PeterGilbert.jpg", width="60%">
+		 <img src="/img/people/PeterGilbert.jpg", width="60%">
 		 <p>
 		   <strong>
 			 Dr. Peter Gilbert<br>
