change styles for about

--- a/_includes/about_2.html
+++ b/_includes/about_2.html
@@ -1,7 +1,5 @@
-<html>
-   <body>
-	 <div style="width: 65%; float:left; margin:1%; padding=1%">
-
+<div class="content-wrapper">
+    <div class="col-md-8 col-md-offset-2" style="width: 60%; float:left; margin:1%; padding=10%">
 	   <p>The Department of Biostatistics and Bioinformatics at
 		 the Rollins School of Public Health, Emory University
 		 welcomes you to the 2021 Georgia Statistics Day (GSD).
@@ -15,7 +13,7 @@
 
 		 <hr>
 		 
-		 <h5 style="font-size:18px; font-weight: bold">Organizing Committee</h5>
+		 <h5 style="font-size:20px">Organizing Committee</h5>
 		 <ul>
 		   <li><a href="https://sph.emory.edu/faculty/profile/index.php?FID=limin-peng-338">
 			   Limin Peng</a>, <em>Emory University</em>
@@ -28,21 +26,20 @@
 			   Azhar Nizam</a>, <em>Emory University</em>
 		 </ul>
 		 
-		 <h5 style="font-size:18px; font-weight: bold">Georgia Tech Coordinator</h5>
+		 <h5 style="font-size:20px">Georgia Tech Coordinator</h5>
 		 <ul>
 		   <li><a href="https://www.isye.gatech.edu/users/yajun-mei">Yajun Mei</a>, <em>Georgia Tech</em></li>
 		 </ul>
 		 
-		 <h5 style="font-size:18px; font-weight: bold">University of Georgia Coordinator</h5>
+		 <h5 style="font-size:20px">University of Georgia Coordinator</h5>
 		 <ul>
 		   <li><a href="https://www.stat.uga.edu/directory/people/abhyuday-mandal">Abhyuday Mandal</a>, <em>University of Georgia</em></li>
 		 </ul>
-
 	 </div>
 
-	 <div style="width: 25%; float:left; margin:2%; padding=1%">
+	 <div style="width: 30%; float:left; margin:2%; padding=1%">
 	   <center>
-		 <h5 style="font-size:18px; font-weight: bold;">Keynote Speaker</h5>
+		 <h5 style="font-size:20px">Keynote Speaker</h5>
 		 <img src="/img/people/PeterGilbert.jpg", width="60%">
 		 <p>
 		   <strong>
@@ -52,7 +49,5 @@
 			 Department of Biostatistics,  University of Washington<br>
 		   </strong>
 	   </center>
-	 </div>
-
-   </body>
-</html>
+    </div>
+</div
