--- a/_includes/about_2.html
+++ b/_includes/about_2.html
@@ -1,5 +1,5 @@
 <div class="content-wrapper">
-    <div class="col-md-8 col-md-offset-2" style="width: 50%; float:left; margin:10%; padding=10%">
+    <div class="col-md-8 col-md-offset-2">
 	   <p>The Department of Biostatistics and Bioinformatics at
 		 the Rollins School of Public Health, Emory University
 		 welcomes you to the 2021 Georgia Statistics Day (GSD).
@@ -37,7 +37,7 @@
 		 </ul>
 	 </div>
 
-	 <div style="width: 30%; float:left; margin:10%; padding=10%">
+	 <div class="col-md-4 col-md-offset-2">
 	   <center>
 		 <h5 style="font-size:20px">Keynote Speaker</h5>
 		 <img src="/img/people/PeterGilbert.jpg", width="50%">
