edit the width of content

--- a/_includes/about_2.html
+++ b/_includes/about_2.html
@@ -1,5 +1,6 @@
 <div class="content-wrapper">
     <div class="col-md-8 col-md-offset-2">
+        <div style="width: 65%; float:left; margin:1%; padding=1%">
 	   <p>The Department of Biostatistics and Bioinformatics at
 		 the Rollins School of Public Health, Emory University
 		 welcomes you to the 2021 Georgia Statistics Day (GSD).
@@ -37,7 +38,7 @@
 		 </ul>
 	 </div>
 
-	 <div class="col-md-4 col-md-offset-2">
+        <div style="width: 25%; float:left; margin:2%; padding=1%">
 	   <center>
 		 <h5 style="font-size:20px">Keynote Speaker</h5>
 		 <img src="/img/people/PeterGilbert.jpg", width="50%">
@@ -49,5 +50,6 @@
 			 Department of Biostatistics,  University of Washington<br>
 		   </strong>
 	   </center>
+        </div>
     </div>
 </div
